--- a/app/views/layouts/travel_admin/application.html.erb
+++ b/app/views/layouts/travel_admin/application.html.erb
@@ -23,7 +23,7 @@
 <body>
   <div id='page_container'>
     <div id='page_head'>
-      <%= image_tag '/pics/logo.png', :class => 'logo' %>
+      <%= image_tag 'logo.png', :class => 'logo' %>
       <div id="progress"><%= image_tag 'admin/progress.gif' %> <%= t(:loading) %>...</div>      
       <%= render 'travel_admin/shared/main_menu' %>
 
