--- a/app/views/layouts/travel_admin/login.html.erb
+++ b/app/views/layouts/travel_admin/login.html.erb
@@ -21,7 +21,7 @@
 
   <div id='page_container'>
     <div id='page_head'>
-      <%= image_tag '/pics/logo.png', :class => 'logo' %>
+      <%= image_tag 'logo.png', :class => 'logo' %>
     </div>
 
     <div id='page_main'>
