--- a/app/views/layouts/travel_admin/application.html.erb
+++ b/app/views/layouts/travel_admin/application.html.erb
@@ -17,6 +17,7 @@
   <%= javascript_include_tag "admin/admin" %>
   <%= javascript_include_tag '/css/xheditor/xheditor-1.1.14-zh-cn.min', '/css/superfish/hoverIntent', '/css/superfish/superfish' %>
   <%= csrf_meta_tags %>
+  <%= render 'travel_admin/shared/head_script' %>
 
   <%= yield :head %>
 </head>
