--- a/app/views/travel_admin/pages/_row.html.erb
+++ b/app/views/travel_admin/pages/_row.html.erb
@@ -5,5 +5,6 @@
   <td class="actions">
     <%= link_to_edit row %> |
     <%= link_to_hide row, 'data-confirm' => 'Are you sure to hide/show this Page?' %> |
+    <%= link_to 'Photo', page_photos_path(row), :target => 'edit-win' %>
   </td>
 </tr>
