--- a/app/views/travel_admin/emails/_row.html.erb
+++ b/app/views/travel_admin/emails/_row.html.erb
@@ -6,7 +6,8 @@
   <td><%= row.created_at %></td>
   <td><%= row.updated_at %></td>
   <td>
-    <%= link_to_edit row %> 
+    <%= link_to_edit row %> | 
+    <%= link_to row.email_data_type, object_url(row.email_data) + '/edit', :remote => true %> 
   </td>
 </tr>
 
