--- a/app/assets/stylesheets/admin/shared/table.css.scss
+++ b/app/assets/stylesheets/admin/shared/table.css.scss
@@ -1,4 +1,8 @@
 .table-header{background-color:#c8e0c0;}
+td.table-header{background-color:#c8e0c0 !important;}
+
 .deleted {text-decoration: line-through;}
 .table th {text-align: center;}
 .cell-middle {text-align: center; vertical-align: middle;}
+td.cell-middle {text-align: center; vertical-align: middle;}
+td.cell-right {text-align:right;}
