--- a/app/views/layouts/travel_admin/application.html.erb
+++ b/app/views/layouts/travel_admin/application.html.erb
@@ -42,6 +42,7 @@
     </div>
     </header>
 
+    <div id="progress"><%= image_tag 'admin/progress.gif' %> Loading ...</div>      
     <div class='container'>
       <%= yield %>
       <div id='hide_contents'>
