--- a/app/assets/stylesheets/admin/shared/page.css.scss
+++ b/app/assets/stylesheets/admin/shared/page.css.scss
@@ -4,7 +4,9 @@ form {margin:0;}
 
 section {padding-top:10px;}
 #hide_contents {}
-
+.hotline {background-color:lightyellow;
+  td{background-color:lightyellow !important;}
+}
 div.border-div {
 border: 1px solid #ddd;
 -webkit-border-radius: 6px;
