--- a/app/views/travel_admin/orders/show.html.erb
+++ b/app/views/travel_admin/orders/show.html.erb
@@ -1,9 +1,15 @@
-<div class='container'>
-  <div class='span-12'>
-    <fieldset>
-      <legend>Customer</legend>
+<%= content_for :breadcrumbs do %>
+  <ul class="breadcrumb">
+    <li><%= link_to 'Orders', orders_path %> <span class="divider">/</span></li>
+    <li class="active">Order: <%= @object.order_number %></li>
+  </ul>
+<% end %>
+<div class='row'>
+  <div class='span6'>
+      <h4>Customer</h4>
       <% if @object.order_detail && @object.order_detail.user_info %>
-        <table class='compact' style='width:auto;'>
+        <table class='table table-condensed' style='width:auto;'>
+          <tbody>
           <tr>
             <td class='note-text'>Full name:</td>
             <td><%= @object.order_detail.user_info.full_name %></td>
@@ -24,16 +30,12 @@
             <td class='note-text'>Address:</td>
             <td><%= @object.order_detail.user_info.addresses.first %></td>
           </tr>
+        </tbody>
         </table>
       <% end %>
-    </fieldset>
-    <fieldset id='list_payments'>
-      <%= render :partial => 'travel_admin/payments/payments', :object => @object  %>
-    </fieldset>
   </div>
-  <div class='span-12 last'>
-    <fieldset>
-      <legend>Order</legend>
+  <div class='span6'>
+      <h4>Order</h4>
       <div class='barcode' style='float:right;'><%= @object.order_number %></div>
       <% if @object.schedule %>
         <p style='font-size:110%;font-weight:bold;'>
@@ -46,13 +48,19 @@
           &nbsp;|&nbsp;(<%= link_to 'seat table', object_url(@object.schedule) %>)
         </p>
       <% end %>
+  </div>
+</div>
+<div class='row'>
+  <div class='span8'>
+    <fieldset id='list_payments'>
+      <%= render :partial => 'travel_admin/payments/payments', :object => @object  %>
     </fieldset>
-
-    <fieldset>
-      <legend>Detail</legend>
-      <table class='border-table' style='width:100%;'>
+  </div>
+  <div class='span4'>
+      <h4>Detail</h4>
+      <table class='table table-bordered table-condensed'>
         <thead>
-          <tr>
+          <tr class='table-header'>
             <th>Room</th>
             <th>Adult</th>
             <th>Child</th>
@@ -62,57 +70,55 @@
         <tbody>
           <% @object.order_items.each_with_index do |item, i| %>
             <tr>
-              <td><%= i %></td>
-              <td><%= item.num_adult %></td>
-              <td><%= item.num_child %></td>
-              <td class='align-right'><%= item.amount %></td>
+              <td class='cell-middle'>#<%= i + 1 %></td>
+              <td class='cell-middle'><%= item.num_adult %></td>
+              <td class='cell-middle'><%= item.num_child %></td>
+              <td class='cell-right'><%= item.amount %></td>
             </tr>
           <% end %>
           <% if @object.order_price %>
             <tr>
-              <td class='align-right'>Total:</td>
-              <td colspan='2' class='align-right'><%= @object.order_price.num_total %> person</td>
-              <td class='align-right'><%= @object.order_price.total_amount %></td>
+              <td class='cell-middle'>Total:</td>
+              <td colspan='2' class='cell-middle'><%= @object.order_price.num_total %> person</td>
+              <td class='cell-right'><%= @object.order_price.total_amount %></td>
             </tr>
             <tr>
-              <td colspan='3' class='align-right'>Adjustment amount:</td>
-              <td class='align-right'><%= @object.order_price.adjustment_amount %></td>
+              <td colspan='3' class='cell-right'>Adjustment amount:</td>
+              <td class='cell-right'><%= @object.order_price.adjustment_amount %></td>
             </tr>
             <tr>
-              <td colspan='3' class='align-right'>Actual Amount:</td>
-              <td class='align-right'><%= @object.order_price.actual_amount %></td>
+              <td colspan='3' class='cell-right'>Actual Amount:</td>
+              <td class='cell-right'><%= @object.order_price.actual_amount %></td>
             </tr>
           <% end %> 
         </tbody>
       </table>
-      <div class='container'>
-        <div class='span-3 note-text'>Order method: </div>
-        <div class='span-5 last'><%= @object.order_method %></div>
+      <div class='row'>
+        <div class='span2 note-text'>Order method: </div>
+        <div class='span3'><%= @object.order_method %></div>
       </div>
-      <div class='container'>
-        <div class='span-3 note-text'>Created at: </div>
-        <div class='span-5 last'><%= time_tag @object.created_at, :class => 'local-datetime' %></div>
+      <div class='row'>
+        <div class='span2 note-text'>Created at: </div>
+        <div class='span3'><%= time_tag @object.created_at, :class => 'local-datetime' %></div>
       </div>
-      <div class='container'>
-        <div class='span-3 note-text'>Updated at: </div>
-        <div class='span-5 last'><%= time_tag @object.updated_at, :class => 'local-datetime' if @object.updated_at %></div>
+      <div class='row'>
+        <div class='span2 note-text'>Updated at: </div>
+        <div class='span3'><%= time_tag @object.updated_at, :class => 'local-datetime' if @object.updated_at %></div>
       </div>
-      <div class='container'>
-        <div class='span-3 note-text'>Completed at: </div>
-        <div class='span-5 last'><%= time_tag @object.completed_at, :class => 'local-datetime' if @object.completed_at %></div>
+      <div class='row'>
+        <div class='span2 note-text'>Completed at: </div>
+        <div class='span3'><%= time_tag @object.completed_at, :class => 'local-datetime' if @object.completed_at %></div>
       </div>
-      <div class='container'>
-        <div class='span-3 note-text'>Status: </div>
-        <div class='span-5 last'><%= @object.status %></div>
+      <div class='row'>
+        <div class='span2 note-text'>Status: </div>
+        <div class='span3'><%= @object.status %></div>
       </div>
-    </fieldset>
   </div>
 </div>
-<%= link_to 'Add remark', new_order_remark_path(@object), :remote => true %>
+<%= icon_link_to 'Add remark', new_order_remark_path(@object), :remote => true, :class => 'btn btn-mini', :icon => 'icon-comment' %>
 <div id='list_remarks' class='notes'>
-<% @object.remarks.each do |rmk| %>
-  <%= render :partial => 'travel_admin/remarks/row', :object => rmk %>
-<% end %>
-
+  <% @object.remarks.each do |rmk| %>
+    <%= render :partial => 'travel_admin/remarks/row', :object => rmk %>
+  <% end %>
 </div>
 
