--- a/app/views/travel_admin/pay_credit_cards/index.html.erb
+++ b/app/views/travel_admin/pay_credit_cards/index.html.erb
@@ -1,9 +1,29 @@
-<h2>Pay Credit Cards</h2>
-<table>
+<%= content_for :breadcrumbs do %>
+      <ul class="breadcrumb">
+        <li>Orders <span class="divider">/</span></li>
+        <li class="active">Website Credit Cards</li>
+      </ul>
+<% end %>
+<h2>Website Credit Cards</h2>
+<table class="data-list table table-bordered table-striped" id="list_pay_credit_cards">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Order</th>
+      <th>Card</th>
+      <th>amount</th>
+      <th>Created at</th>
+      <th>Op</th>
+    </tr>
+  </thead>
 <% PayCreditCard.where(:status => 0).each do |pcc| %>
   <tr>
-    <td><%= pcc.id %></td>
+    <td class='cell-middle'><%= pcc.id %></td>
+    <td><%= link_to pcc.order_id, pcc.order %></td>
+    <td class='cell-middle'><%= pcc.card_type %></td>
+    <td class='cell-right'><%= number_with_precision(pcc.total_amount, :precision => 2) %></td>
     <td><%= pcc.created_at %></td>
+    <td class='cell-middle'><%= icon_link_to 'Look Card', object_url(pcc), :icon => 'icon-eye-open', :class => 'btn btn-small btn-success' %></td>
   </tr>
 <% end %>
 </table>
