--- a/app/views/travel_admin/pay_credit_cards/show.html.erb
+++ b/app/views/travel_admin/pay_credit_cards/show.html.erb
@@ -1,5 +1,34 @@
 <h2>Look Card</h2>
-ID: <%= @object.id %>
-
-<%= link_to 'Look Card', look_pay_credit_card_path(@object), :class => 'button green' %>
+<%= form_for(@object) do |f| %>
+<table class="data-list table table-bordered table-striped" id="pay_credit_cards" style='width:auto;'>
+  <tr>
+    <td class='table-header'>ID: </td><td><%= @object.id %></td>
+  </tr>
+  <tr>
+    <td class='table-header'>Card type:</td><td><%= @object.card_type %></td>
+  </tr>
+  <tr>
+    <td class='table-header'>Card number:</td><td><%= @object.card_number %></td>
+  </tr>
+  <tr>
+    <td class='table-header'>Name:</td><td><%= @object.full_name %></td>
+  </tr>
+  <tr>
+    <td class='table-header'>Valid date:</td><td><%= @object.valid_date %></td>
+  </tr>
+  <tr>
+    <td class='table-header'>CVV</td><td><%= @object.csc %></td>
+  </tr>
+  <tr>
+    <td class='table-header'>Prof code</td><td><%= f.text_field :prof_code %></td>
+  </tr>
+  <tr>
+    <td class='table-header'>Status</td><td><%= @object.status %></td>
+  </tr>
+</table>
+<p>
+  <%= hidden_field_tag :lookcard, '1' %>
+  <a href='#' class='btn btn-info' onclick='submit_this_form(this);'><i class='icon-ok'></i> Look Card Done</a>
+</p>
+<% end %>
 
