--- a/app/views/travel_admin/payments/_payments.html.erb
+++ b/app/views/travel_admin/payments/_payments.html.erb
@@ -1,7 +1,7 @@
-      <legend>Payment</legend>
-      <table class='border-table' style='width:100%;'>
+      <h4>Payment</h4>
+      <table class='table table-bordered table-condensed'>
         <thead>
-          <tr>
+          <tr class='table-header'>
             <th>Method</th>
             <th>before</th>
             <th>Amount</th> 
@@ -36,6 +36,17 @@
       </table>
       <p style='text-align:right;'><span class='note-text'>Current balance:</span> <span class='strong'><%= payments.order_price.balance_amount %></span></p>
       <p>
-        <%= button_link_to 'Payment', new_payment_path(:order_id => payments.id), {:remote => true, :icon => 'add' }%>
-        <%= button_link_to 'Refund', refund_payments_path(:order_id => payments.id), {:remote => true, :icon => 'add' }%>
+        <div class='btn-group'>
+          <a class='btn btn-success btn-mini' data-toggle='dropdown' href='#'>
+            <i class='icon-plus'></i> Payment
+            <span class='caret'></span></a>
+          <ul class='dropdown-menu'>
+            <li><%= link_to raw('<i class="icon-pencil"></i> Pay Cash'), new_order_pay_cash_path(@order), :remote => true  %></li>
+            <li><a href='#'><i class='icon-pencil'></i> Pay Cash</a></li>
+            <li class='divider'></li>
+            <li><a href='#'><i class='icon-pencil'></i> Pay Cash</a></li>
+          </ul>
+        </div>
+        <%= icon_link_to 'Payment', new_payment_path(:order_id => payments.id), :remote => true, :icon => 'icon-plus', :class => 'btn btn-mini btn-success' %>
+        <%= icon_link_to 'Refund', refund_payments_path(:order_id => payments.id), :remote => true, :icon => 'icon-share', :class => 'btn btn-mini btn-info' %>
       </p>
