--- a/app/views/travel_admin/resource/update.js.erb
+++ b/app/views/travel_admin/resource/update.js.erb
@@ -7,7 +7,7 @@
   } else {
     $("#edit_<%= @object.class.name.underscore %>_div").modal('hide');
     $("#<%= dom_id(@object) %>")
-      .replaceWith("<%= escape_javascript(render(:partial => 'row', :object => @object)) %>");
+      .replaceWith("<%=j render(:partial => 'row', :object => @object) %>");
     $("#<%= dom_id(@object) %>").delay(500)
       .fadeOut().fadeIn()
       .fadeOut().fadeIn();
