--- a/app/views/travel_admin/schedules/_form_new.html.erb
+++ b/app/views/travel_admin/schedules/_form_new.html.erb
@@ -1,3 +1,8 @@
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+  <h3 id="myModalLabel">New Schedule *</h3>
+</div>
+<div class="modal-body">
 <%= form_tag schedules_path, :method => :post, :remote => true do %>
   <%= hidden_field_tag :page, params[:page] %>
 	<p>
@@ -10,8 +15,11 @@
 		<%= text_field_tag :departure_date %>
     <div id='departure'></div>		
 	</p>
-	<p>
-		<%= submit_tag 'Add Schedule' %>
-	</p>
 <% end %>
+</div>
+<div class="modal-footer">
+  <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  <button class="btn btn-primary" onclick='submit_dialog_form(this)'>Save changes</button>
+</div>
+
 
