--- a/app/views/travel_admin/schedules/index.html.erb
+++ b/app/views/travel_admin/schedules/index.html.erb
@@ -12,8 +12,7 @@
       <span class='add-on'>To</span>
       <%= f.text_field :departure_date_less_than_or_equal_to, :class => 'span2 date-picker' %>
       <%= search_button %>
-      <%= icon_link_to "Generate schedules", 'schedules/generate', :icon => 'icon-share', :class => 'btn btn-success' %>
-      <%= icon_link_to "Add schedule", new_schedule_path, :icon => 'icon-plus', :remote => true, :class => 'btn btn-info' %>
+      <%= icon_link_to "Add schedule", new_schedule_path, :icon => 'icon-plus', :remote => true, :class => 'btn btn-success' %>
     </div>
     <% end %>  
 <% end %>
