order shift etc

--- a/app/assets/stylesheets/admin/shared/page.css.scss
+++ b/app/assets/stylesheets/admin/shared/page.css.scss
@@ -1,7 +1,7 @@
 form {margin:0;}
 .modal{width:700px;}
 .footer {font-size: 80%;}
-
+.strong {font-weight: bold;}
 section {padding-top:10px;}
 #hide_contents {}
 .hotline {background-color:lightyellow;
