--- a/app/views/travel_admin/orders/_row.html.erb
+++ b/app/views/travel_admin/orders/_row.html.erb
@@ -3,7 +3,7 @@
         <td><%= row.order_detail.full_name if row.order_detail %></td>
         <td><%= row.schedule.title if row.schedule %></td>
         <td><%= time_tag row.created_at %></td>
-        <td><%= row.status %></td>
+        <td><%= type_text.get_text('order.status', row.status) %></td>
       <td class='actions'>
           <%= row_link_to_edit row %>
       </td>
