--- a/app/views/travel_admin/shared/_footer.html.erb
+++ b/app/views/travel_admin/shared/_footer.html.erb
@@ -1,7 +1,15 @@
-    <ul class='footer-links'>
-      <li>© Copyright 2013, <%= cfg.get_config(:site_name) %></li>
-      <li> | </li>
-      <li><a href='/'>Website</a></li>
-      <li><%= link_to 'Destinations', destinations_path %></li>
-      <li><%= link_to 'Orders', orders_path %></li>
-    </ul>
+<ul class='footer-links'>
+  <li>© Copyright 2013, <%= cfg.get_config(:site_name) %></li>
+  <li> | </li>
+  <li><a href='/'>Website</a></li>
+  <li><%= link_to 'Destinations', destinations_path %></li>
+  <li><%= link_to 'Orders', orders_path %></li>
+</ul>
+<ul id='color_schemas'>
+    <li class='color1'></li>
+    <li class='color2'></li>
+    <li class='color3'></li>
+    <li class='color4'></li>
+    <li class='color5'></li>
+    <li class='color6'></li>
+</ul>
