--- a/app/views/travel_admin/tours/_row_gen.html.erb
+++ b/app/views/travel_admin/tours/_row_gen.html.erb
@@ -8,8 +8,8 @@
           <%= row_gen.description.title %><br />
           <%= row_gen.description.title_cn %>
         </td>
-        <td><%= row_gen.tour_setting.weekly %></td>
-        <td>
+        <td class='cell-middle'><%= row_gen.tour_setting.weekly %></td>
+        <td class='cell-middle'>
           <%= row_gen.tour_price.price1 %>, <%= row_gen.tour_price.price2 %><br />
           <%= row_gen.tour_price.price3 %>, <%= row_gen.tour_price.price4 %>
         </td>
@@ -17,7 +17,7 @@
           <%= row_gen.schedules.maximum(:departure_date) %><br />
           <b><%= row_gen.schedules.where('departure_date>?', Date.today).count %></b> schedules
         </td>
-        <td>
+        <td class='cell-middle'>
           <%= icon_link_to 'generate', gen_tour_path(row_gen), :icon => 'icon-plus', :class => 'btn btn-mini btn-success', :remote => true, :onclick => 'hotline_tr(this);' %>
           <% if defined? @gen_count %>
             <br />added: <b><%= @gen_count %></b>
