--- a/app/views/travel_admin/tours/generate.html.erb
+++ b/app/views/travel_admin/tours/generate.html.erb
@@ -19,7 +19,7 @@
       </th>
       <th>Title</th>
       <th>Weekly</th>
-      <th>Price</th>
+      <th width='100'>Price</th>
       <th>last schedule</th>
       <th width='80'>op</th>
     </tr>
