--- a/app/assets/stylesheets/admin/shared/progress.css.scss
+++ b/app/assets/stylesheets/admin/shared/progress.css.scss
@@ -2,19 +2,23 @@
   display:none;
   background: #4c773e;
   color:#fff;
-  font-size:170%;
+  font-size:19px;
   height:25px;
   padding:10px 0 15px;
   position:fixed;
-  top: 68px;
+  top: 0px;
   right: 1em;
-  text-align:center;
+  left: 50%;
+  margin-left: -160px;
   width:320px;
+  text-align:center;
   font-weight:bold;
   -moz-border-radius-bottomleft:15px;
   -moz-border-radius-bottomright:15px;
   -webkit-border-bottom-left-radius: 15px;
   -webkit-border-bottom-right-radius: 15px;
+  z-index: 2000;
+  line-height:32px;
 }
 #progress img{
   vertical-align:middle;
