--- a/app/views/layouts/travel_admin/application.html.erb
+++ b/app/views/layouts/travel_admin/application.html.erb
@@ -4,7 +4,7 @@
     <title>admin-<%= @title %></title>
     <%= favicon_link_tag %>
     <meta name='<%= @title %>' content='width=device-width, initial-scale=1.0'>
-    <%= stylesheet_link_tag '/css/bootstrap/css/bootstrap', 'admin/admin', '/css/bootstrap/css/datepicker' %>
+    <%= stylesheet_link_tag '/css/bootstrap/css/bootstrap', '/css/bootstrap/css/datepicker', 'admin/admin', '/css/my_icons/glyphicons', '/css/my_icons/gicons' %>
     <%= javascript_include_tag 'admin/admin', '/css/bootstrap/js/bootstrap.min', '/css/xheditor/xheditor-1.1.14-zh-cn.min', '/css/bootstrap/js/bootstrap-datepicker' %>
     <%= csrf_meta_tags %>
     <%= render 'travel_admin/shared/head_script' %>
