--- a/app/views/travel_admin/home/index.html.erb
+++ b/app/views/travel_admin/home/index.html.erb
@@ -1,1 +1,6 @@
+<%= content_for :head do %>
+  <%= stylesheet_link_tag '/css/my_icons/glyphicons' %>
+  <%= stylesheet_link_tag '/css/my_icons/gicons' %>
+<% end %>
 <h2>admin - Home</h2>
+
