--- a/app/views/travel_admin/orders/_form.html.erb
+++ b/app/views/travel_admin/orders/_form.html.erb
@@ -1,4 +1,7 @@
-<% @object.build_order_detail if !@object.order_detail %>
+<% 
+  @object.build_order_detail unless @object.order_detail 
+  @object.build_order_price unless @object.order_price
+%>
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
   <h3 id="myModalLabel">Edit Order# <%= @object.order_number %></h3>
@@ -17,7 +20,7 @@
           <%= f.fields_for :order_detail do |detail| %>
             Customer: 
             <%#= icon_link_to 'Change Customer', select_user_infos_path + '?id=' + (@object.order_detail.user_info ? @object.order_detail.user_info.id.to_s : '0'), {:remote => true, :class => 'btn btn-mini btn-success', :icon => 'icon-user'} %>
-            <%= icon_link_to 'Change Customer', find_user_infos_path, :remote => true, :icon => 'icon-user', :class => 'btn btn-mini btn-success' %><br />
+            <%= icon_link_to 'Change Customer', '#', :onclick => 'goto_find_user()', :icon => 'icon-user', :class => 'btn btn-mini btn-success' %><br />
             <%= detail.text_field :user_info_id, :readonly => true %><br />
             Full name:<br />
             <%= detail.text_field :full_name, :readonly => true %><br />
@@ -32,7 +35,12 @@
           <% end %>
       </div>
       <div class='span4'>
-        <%= add_object_js_link 'Add room', f, :order_items, 'form_room', '#rooms'  %>
+        <%= add_object_js_link 'Add room', f, :order_items, 'form_room', '#rooms'  %> (price: 
+        <span id='order_price1'><%= @object.schedule.price.price1 %></span>,
+        <span id='order_price2'><%= @object.schedule.price.price2 %></span>,
+        <span id='order_price3'><%= @object.schedule.price.price3 %></span>,
+        <span id='order_price4'><%= @object.schedule.price.price4 %></span>
+        )
         <div class='row'>
           <div class='span1'>Adult</div>
           <div class='span1'>Child</div>
@@ -43,6 +51,9 @@
             <%= render 'form_room', :f => item %>
           <% end %>
         </div>
+        <div>
+          total amount: <span id='total_amount' class='strong' style='font-size: 120%'><%= number_with_precision(@object.order_price.total_amount, :precision => 2) %></span>
+        </div>
       </div>
       <script type='text/javascript'>
         var tmp = "<%= generate_template f, :order_items, :partial => 'form_room'  %>";
@@ -52,7 +63,7 @@
   </div>
 </div>
 <div class="modal-footer">
-  <%= link_to 'Payment', order_path(@object.id) if @object.id %>
+  <%= icon_link_to 'Payment', order_path(@object.id), :class => 'pull-left btn btn-small btn-info', :icon => 'icon-shopping-cart' unless @object.new_record? %>
   <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
   <button class="btn btn-primary" onclick='submit_dialog_form(this)'>Save changes</button>
 </div>
