--- a/app/views/travel_admin/orders/new.js.erb
+++ b/app/views/travel_admin/orders/new.js.erb
@@ -1,4 +1,4 @@
-var edit_div_id = "edit_payment_div";
+var edit_div_id = "edit_order_div";
 var edit_div = '#' + edit_div_id;
 
 if ($(edit_div).length == 0){
@@ -6,11 +6,9 @@ if ($(edit_div).length == 0){
 }
 
 $(edit_div)
-  .html("<%= j render(:partial => "form") %>")
-  .on('shown', function(){
-    $('#recv_cash').focus();
-  })
+	.html("<%= j render(:partial => "form") %>")
   .modal();
 
-  //pay cash script
-  $('#recv_cash').keyup(recaculate_pay_cash);
+  recaculate_price();
+
+
