--- a/app/views/travel_admin/pay_credit_cards/new.js.erb
+++ b/app/views/travel_admin/pay_credit_cards/new.js.erb
@@ -8,9 +8,12 @@ if ($(edit_div).length == 0){
 $(edit_div)
   .html("<%= j render(:partial => "form") %>")
   .on('shown', function(){
-    $('#recv_cash').focus();
+    $('#pay_credit_card_card_number').focus();
   })
   .modal();
 
   //pay cash script
-  $('#recv_cash').keyup(recaculate_pay_cash);
+  $('#pay_credit_card_amount').keyup(recaculate_pay_credit_card);
+  $('#pay_credit_card_amount').val($('#tb_balance_before').text());
+  recaculate_pay_credit_card();
+
