--- a/app/views/travel_admin/schedules/new.js.erb
+++ b/app/views/travel_admin/schedules/new.js.erb
@@ -1,3 +1,10 @@
+<%
+  tour = Tour.find(params[:tour_id])
+  datelist = tour.schedules.ready_schedules.map {|s| s.departure_date.strftime('%Y.%m.%d' + '|' + s.id.to_s)}.join(',')
+  rsv_date = tour.tour_setting.days_in_advance
+  rsv_date = cfg.get_config('max_reservation_days').to_i if rsv_date == 0
+%>
+var datelist = "<%= datelist %>";
 var edit_div_id = "edit_schedule_div";
 var edit_div = '#' + edit_div_id;
 
@@ -6,45 +13,20 @@ if ($(edit_div).length == 0){
 }
 
 $(edit_div)
-	.html("<%= j render(:partial => "form_new") %>")
+  .html("<%= j render(:partial => "form_new") %>")
   .modal();
 
-$('.date-picker').datepicker({ showButtonPanel: true, dateFormat: 'yy-mm-dd' });
-/*
+  $('.date-picker').datepicker({ format: 'yyyy-mm-dd', todayBtn: 'linked', beforeShowDay: schedule_showdate, startDate: '<%= Date.today %>', endDate: '<%= Date.today + rsv_date %>'  });
 
-
-$( "#tour_select" ).autocomplete({
-	source: host_path + "/tours/search",
-	minLength: 2,
-	select: function( event, ui ) {
-		if (ui.item) {
-			$('#tour_id').val(ui.item.id);
-			$('#departure_date').val('');
-		}
-	}
-});
-
-$('#tour_select').click(function(){
-	$(this).select();
-});
-
-function date_tostring(d){
-	var m = d.getMonth() + 1;
-	if (m < 10)
-		m = "0" + m;
-	else
-		m = '' + m;
-	return d.getFullYear() + '.' + m + '.' + d.getDate();		
-}
-
-
-$('#departure').datepicker({
-  numberOfMonths: 2,
-  showButtonPanel: false,
-  minDate: 0,
-  dateFormat: 'yy-mm-dd',
-  onSelect: function(dateText, inst){
-    $('#departure_date').val(dateText);
+  function schedule_showdate(date){
+    var datelist = "<%= datelist %>,";
+    var dt = '' + date.getFullYear() + '.' + ('0' + (date.getMonth()+1)).slice(-2) + '.' + ('0' + date.getDate()).slice(-2);
+    var pos_dt = datelist.indexOf(dt);
+    if (pos_dt >= 0) {
+      var pos_s = datelist.indexOf('|', pos_dt);
+      var pos_e = datelist.indexOf(',', pos_dt);
+      var sid   = datelist.slice(pos_s+1, pos_e);
+      return {enabled: false, classes: 'dt-schedule', tooltip: 'Schedule id: ' + sid};
+    } else
+      return true;
   }
-  });
-  */
