--- a/app/views/travel_admin/user_infos/_form_email.html.erb
+++ b/app/views/travel_admin/user_infos/_form_email.html.erb
@@ -1,5 +1,8 @@
-<div class='container'>
-  <div class='span-6'><%= f.email_field :email_address %></div>
-  <div class='span-2 last'><%= f.check_box :_destroy, :onchange => 'rm_if_new_record(this);' %><%= f.label :_destroy, 'Del'%></div>
+<div class='item-template'>
+  <%= f.email_field :email_address %>
+  <label class="checkbox inline">
+    <%= f.check_box :_destroy, :onchange => 'rm_if_new_record(this);' %>
+    Del
+  </label>
 </div>
 
