--- a/app/views/travel_admin/user_infos/update.js.erb
+++ b/app/views/travel_admin/user_infos/update.js.erb
@@ -8,16 +8,12 @@
     else
       location.href = host_path + '/user_infos/<%= @object.id %>';
   } else {
-    $("#edit_<%= @object.class.name.underscore %>_div").modal('hide');
+    $("#edit_user_info_div").modal('hide');
     $("#<%= dom_id(@object) %>")
       .replaceWith("<%= escape_javascript(render(:partial => 'row', :object => @object)) %>");
     $("#<%= dom_id(@object) %>").delay(500)
       .fadeOut().fadeIn()
       .fadeOut().fadeIn();
-  
-    var after_function_name = "<%= @object.class.name.underscore %>_after_updated";
-    if (typeof(window[after_function_name]) == 'function')
-    eval(after_function_name + "(<%= @object.id %>)");
-  }
+  } 
 <% end %>
 
